--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
        <a id="clickMe"
-            href="itms-services:///?action=download-manifest&url=https://xxx.gitee.io/xxx/ios/manifest.list">ios下载</a>
+            href="itms-services:///?action=download-manifest&url=https://raw.githubusercontent.com/aLittlestar0/testipa/master/manifest.plist">ios下载</a>
     </body>
     </html>
 </DOCTYPE>
